traefik/base/traefik-svc-dashboard.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik-dashboard
  namespace: traefik
spec:
  ports:
  - name: dashboard-http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: traefik
  sessionAffinity: None
  type: ClusterIP
