traefik/base/traefik-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik-lb
  namespace: traefik
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: traefik
  sessionAffinity: None
  type: LoadBalancer
