traefik/base/traefik-svc-loadbalancer.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    finalizers:
    - service.kubernetes.io/load-balancer-cleanup
    labels:
      app: traefik
    name: traefik
    namespace: traefik
  spec:
    externalTrafficPolicy: Cluster
    ports:
    - name: https
      nodePort: 31153
      port: 443
      protocol: TCP
      targetPort: https
    - name: http
      nodePort: 31599
      port: 80
      protocol: TCP
      targetPort: http
    selector:
      app: traefik
    sessionAffinity: None
    type: LoadBalancer
