traefik/base/traefik-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: metrics
      port: 9100
    - protocol: TCP
      name: websecure
      port: 443
    - protocol: TCP
      name: ping
      port: 8082
  selector:
    app: traefik
  sessionAffinity: None
  type: ClusterIP
